# todolist

./: CMakeLists.txt
src/: main.cpp  textcpp.txt  todoList  todolist  todolist.cpp  todolist.h  todolist.py
